@@ -20,6 +20,17 @@ private Record last = null;
 private long defaultTTL;
 private Master included = null;
 private Tokenizer st;
+private int currentType;
+private int currentDClass;
+private long currentTTL;
+
+private boolean generating;
+private String genNameSpec;
+private String genRdataSpec;
+private long genStart;
+private long genEnd;
+private long genStep;
+private long genCurrent;
 
 Master(File file, Name initialOrigin, long initialTTL) throws IOException {
 	if (origin != null && !origin.isAbsolute()) {
@@ -109,6 +120,243 @@ parseName(String s, Name origin) throws TextParseException {
 	}
 }
 
+private void
+parseTTLClassAndType() throws IOException {
+	String s;
+	boolean seen_class = false;
+
+
+	// This is a bit messy, since any of the following are legal:
+	//   class ttl type
+	//   ttl class type
+	//   class type
+	//   ttl type
+	//   type
+	seen_class = false;
+	s = st.getString();
+	if ((currentDClass = DClass.value(s)) >= 0) {
+		s = st.getString();
+		seen_class = true;
+	}
+
+	try {
+		currentTTL = TTL.parseTTL(s);
+		s = st.getString();
+	}
+	catch (NumberFormatException e) {
+		if (last == null && defaultTTL < 0)
+			throw st.exception("missing TTL");
+		else if (defaultTTL >= 0)
+			currentTTL = defaultTTL;
+		else
+			currentTTL = last.getTTL();
+	}
+
+	if (!seen_class) {
+		if ((currentDClass = DClass.value(s)) >= 0) {
+			s = st.getString();
+		} else {
+			currentDClass = DClass.IN;
+		}
+	}
+
+	if ((currentType = Type.value(s)) < 0)
+		throw st.exception("Invalid type '" + s + "'");
+}
+
+private long
+parseUInt32(String s) {
+	if (!Character.isDigit(s.charAt(0)))
+		return -1;
+	try {
+		long l = Long.parseLong(s);
+		if (l < 0 || l > 0xFFFFFFFFL)
+			return -1;
+		return l;
+	}
+	catch (NumberFormatException e) {
+		return -1;
+	}
+}
+
+private void
+startGenerate() throws IOException {
+	String s;
+	int n;
+
+	// The first field is of the form start-end[/step]
+	// Regexes would be useful here.
+	s = st.getIdentifier();
+	n = s.indexOf("-");
+	if (n < 0)
+		throw st.exception("Invalid $GENERATE range specifier: " + s);
+	String startstr = s.substring(0, n);
+	String endstr = s.substring(n + 1);
+	String stepstr = null;
+	n = endstr.indexOf("/");
+	if (n >= 0) {
+		stepstr = endstr.substring(n + 1);
+		endstr = endstr.substring(0, n);
+	}
+	genStart = parseUInt32(startstr);
+	genCurrent = genStart;
+	genEnd = parseUInt32(endstr);
+	if (stepstr != null)
+		genStep = parseUInt32(stepstr);
+	else
+		genStep = 1;
+	if (genStart < 0 || genEnd < 0 || genStart > genEnd || genStep <= 0)
+		throw st.exception("Invalid $GENERATE range specifier: " + s);
+
+	// The next field is the name specification.
+	genNameSpec = st.getIdentifier();
+
+	// Then the ttl/class/type, in the same form as a normal record.
+	// Only some types are supported.
+	parseTTLClassAndType();
+	if (currentType != Type.PTR &&
+	    currentType != Type.CNAME &&
+	    currentType != Type.DNAME &&
+	    currentType != Type.A &&
+	    currentType != Type.AAAA &&
+	    currentType != Type.NS)
+		throw st.exception("$GENERATE does not support " +
+				   Type.string(currentType) + " records");
+
+	// Next comes the rdata specification.
+	genRdataSpec = st.getIdentifier();
+
+	// That should be the end.  However, we don't want to move past the
+	// line yet, so put back the EOL after reading it.
+	st.getEOL();
+	st.unget();
+
+	generating = true;
+}
+
+private void
+endGenerate() throws IOException {
+	// Read the EOL that we put back before.
+	st.getEOL();
+
+	generating = false;
+}
+
+private String
+substitute(String spec, long n) throws IOException {
+	boolean escaped = false;
+	byte [] str = spec.getBytes();
+	StringBuffer sb = new StringBuffer();
+
+	for (int i = 0; i < str.length; i++) {
+		char c = (char)(str[i] & 0xFF);
+		if (escaped) {
+			sb.append(c);
+			escaped = false;
+		} else if (c == '\\') {
+			if (i + 1 == str.length)
+				throw st.exception("Invalid escape character");
+			escaped = true;
+		} else if (c == '$') {
+			boolean negative = false;
+			long offset = 0;
+			long width = 0;
+			long base = 10;
+			if (i + 1 < str.length && str[i + 1] == '$') {
+				// '$$' == literal '$' for backwards
+				// compatibility with old versions of BIND.
+				c = (char)(str[++i] & 0xFF);
+				sb.append(c);
+				continue;
+			} else if (i + 1 < str.length && str[i + 1] == '{') {
+				// It's a substitution with modifiers.
+				i++;
+				if (i + 1 < str.length && str[i + 1] == '-') {
+					negative = true;
+					i++;
+				}
+				while (i + 1 < str.length) {
+					c = (char)(str[++i] & 0xFF);
+					if (c == ',' || c == '}')
+						break;
+					if (c < '0' || c > '9')
+						throw st.exception(
+							"invalid offset");
+					c -= '0';
+					offset *= 10;
+					offset += c;
+				}
+				if (negative)
+					offset = -offset;
+
+				if (c == ',') {
+					while (i + 1 < str.length) {
+						c = (char)(str[++i] & 0xFF);
+						if (c == ',' || c == '}')
+							break;
+						if (c < '0' || c > '9')
+							throw st.exception(
+							   "invalid width");
+						c -= '0';
+						width *= 10;
+						width += c;
+					}
+				}
+
+				if (c == ',') {
+					if  (i + 1 == str.length)
+						throw st.exception(
+							   "invalid base");
+					c = (char)(str[++i] & 0xFF);
+					if (c == 'o')
+						base = 8;
+					else if (c == 'x')
+						base = 16;
+					else if (c != 'd')
+						throw st.exception(
+							   "invalid base");
+				}
+
+				if (i + 1 == str.length || str[i + 1] != '}')
+					throw st.exception("invalid modifiers");
+				i++;
+			}
+			long v = n + offset;
+			if (v < 0)
+				throw st.exception("invalid offset expansion");
+			String number;
+			if (base == 8)
+				number = Long.toOctalString(v);
+			else if (base == 16)
+				number = Long.toHexString(v);
+			else
+				number = Long.toString(v);
+			if (width != 0 && width > number.length()) {
+				int zeros = (int)width - number.length();
+				while (zeros-- > 0)
+					sb.append('0');
+			}
+			sb.append(number);
+		} else {
+			sb.append(c);
+		}
+	}
+	return sb.toString();
+}
+
+private Record
+nextGenerated() throws IOException {
+	if (genCurrent > genEnd)
+		return null;
+	String namestr = substitute(genNameSpec, genCurrent);
+	Name name = Name.fromString(namestr, origin);
+	String rdata = substitute(genRdataSpec, genCurrent);
+	Record rec = Record.fromString(name, currentType, currentDClass,
+				       currentTTL, rdata, origin);
+	genCurrent += genStep;
+	return rec;
+}
+
 /**
  * Returns the next record in the master file.  This will process any
  * directives before the next record.
@@ -127,11 +375,14 @@ _nextRecord() throws IOException {
 			return rec;
 		included = null;
 	}
+	if (generating) {
+		Record rec = nextGenerated();
+		if (rec != null)
+			return rec;
+		endGenerate();
+	}
 	while (true) {
 		Name name;
-		long ttl;
-		int type, dclass;
-		boolean seen_class;
 
 		token = st.get(true, false);
 		if (token.type == Tokenizer.WHITESPACE) {
@@ -179,6 +430,12 @@ _nextRecord() throws IOException {
 				 * the new file.  Recursing works better.
 				 */
 				return nextRecord();
+			} else  if (s.equalsIgnoreCase("$GENERATE")) {
+				if (generating)
+					throw new IllegalStateException
+						("cannot nest $GENERATE");
+				startGenerate();
+				return nextGenerated();
 			} else {
 				throw st.exception("Invalid directive: " + s);
 			}
@@ -190,44 +447,9 @@ _nextRecord() throws IOException {
 			}
 		}
 
-		// This is a bit messy, since any of the following are legal:
-		//   class ttl type
-		//   ttl class type
-		//   class type
-		//   ttl type
-		//   type
-		seen_class = false;
-		s = st.getString();
-		if ((dclass = DClass.value(s)) >= 0) {
-			s = st.getString();
-			seen_class = true;
-		}
-
-		try {
-			ttl = TTL.parseTTL(s);
-			s = st.getString();
-		}
-		catch (NumberFormatException e) {
-			if (last == null && defaultTTL < 0)
-				throw st.exception("missing TTL");
-			else if (defaultTTL >= 0)
-				ttl = defaultTTL;
-			else
-				ttl = last.getTTL();
-		}
-
-		if (!seen_class) {
-			if ((dclass = DClass.value(s)) >= 0) {
-				s = st.getString();
-			} else {
-				dclass = DClass.IN;
-			}
-		}
-
-		if ((type = Type.value(s)) < 0)
-			throw st.exception("Invalid type '" + s + "'");
-
-		last = Record.fromString(name, type, dclass, ttl, st, origin);
+		parseTTLClassAndType();
+		last = Record.fromString(name, currentType, currentDClass,
+					 currentTTL, st, origin);
 		return last;
 	}
 }
