@@ -1,3 +1,6 @@
+7/7/2004
+	- Implement the $GENERATE directive.
+
 6/28/2004
 	- Canonicalizing a name created with the Name(Name src, int n)
 	  constructor caused an exception.
